kubernetes/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.rke2.box
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
